# app/Http/Controllers/BrandsController.php
@@ -47,6 +47,36 @@ class BrandsController extends Controller
         }
     }
 
+
+    /**
+     * @OA\Get(
+     *    path="/api/v1/brands/dropdown/data",
+     *    tags={"Brands"},
+     *    summary="Brands Dropdown List",
+     *    description="Brands Dropdown List",
+     *    security={{"bearer":{}}},
+     *    @OA\Response(
+     *         response=200,
+     *         description="Success",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="success", type="boolean", example=true),
+     *             @OA\Property(property="message", type="string", example="Category list fetched successfully."),
+     *             @OA\Property(property="data", type="object", example="null"),
+     *         )
+     *     )
+     * )
+     */
+    public function dropdown()
+    {
+        try {
+            $this->permission->canViewBrands();
+
+            return $this->successResponse('Brands dropdown fetched successfully.', $this->brandService->dropdown());
+        } catch (\Throwable $th) {
+            return $this->errorResponse('Brands dropdown could not be fetched.', $th);
+        }
+    }
+
     /**
      * @OA\Post(
      *    path="/api/v1/brands",
