# routes/api.php
@@ -6,6 +6,7 @@ use App\Http\Controllers\Auth\PasswordResetController;
 use App\Http\Controllers\Auth\RegisterController;
 use App\Http\Controllers\BrandsController;
 use App\Http\Controllers\CategoriesController;
+use App\Http\Controllers\ShopsController;
 use App\Http\Controllers\TestController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -26,5 +27,12 @@ Route::get('/test', [TestController::class, 'index']);
 
 Route::middleware('auth')->group(function () {
     Route::apiResource('categories', CategoriesController::class);
+    Route::get('categories/dropdown/data', [CategoriesController::class, 'dropdown']);
+
     Route::apiResource('brands', BrandsController::class);
+    Route::get('brands/dropdown/data', [BrandsController::class, 'dropdown']);
+
+    Route::get('shops/dropdown/data', [ShopsController::class, 'dropdown']);
+
+    // Route::apiResource('products', ProductsController::class);
 });
